k8s/frontend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend2
  labels:
    project: admin
    environment: stage
    owner: adam
