k8s/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: frontend
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer   
 

# --- 

# apiVersion: v1
# kind: Service
# metadata:
#   name: demo
#  # namespace: frontend
# spec:
#   selector:
#     app: demo
#   ports:
#     - name: demo-svc
#     - protocol: TCP
#       port: 3000
#       targetPort: 3000
#       nodePort: 32000
#   type: NodePort
