k8s/deny-all-policy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all2
  namespace: frontend3
spec:
  podSelector: {}        # applies to all pods in the namespace
  policyTypes:
    - Ingress            # block incoming traffic
    - Egress             # block outgoing traffic
